# Woo-Analytics

./: .replit  INSTALLATION.md  LOCAL-SETUP.md  QUICK-START.md  RASPBERRY-PI-FILES.md  deploy.sh  google_auth_url.txt  google_merchant_credentials.json  pyproject.toml  replit.nix  woocommerce_client.py  woocommerce_dashboard.py
.streamlit/: config.toml  style.css
attached_assets/: Pasted--Debug-mode-is-enabled-You-will-see-detailed-API-responses-and-error-messages-Date-Range-Selec-1740673994999.txt  Pasted-pyarrow-lib-ArrowInvalid-cannot-mix-list-and-non-list-non-null-values-Conversion-failed-for-c-1740731423294.txt
downloads/: DOWNLOAD_INSTRUCTIONS.md
pages/: google_merchant_setup.py
raspberry_pi_package/: .env.example  RASPBERRY-PI-SETUP.md  README.md  create_package.sh  requirements.txt  run_on_pi.sh  setup_raspberry_pi.sh
raspberry_pi_package/.streamlit/: config.toml
raspberry_pi_package/scripts/: load_env.sh  setup_raspberry_pi.sh
raspberry_pi_package/utils/: google_ads_client.py  google_analytics_client.py  translations.py  woocommerce_client.py
scripts/: .env.example  run_dashboard.sh
utils/: data_processor.py  export_handler.py  google_ads_client.py  google_analytics_client.py  google_merchant_client.py  notification_handler.py  translations.py  woocommerce_client.py
